# CSC-335

./: .gitignore  CMakeLists.txt  Questions1.txt  Questions2.txt  README.md  boot.sh  boot_debug.sh  compile.sh  debug.sh  run.sh
group_project/: compile.sh  configure.sh  run.sh
group_project/src/kern/arch/mips/syscall/: syscall.c
group_project/src/kern/concurrent_list/: linked_list_test.c
group_project/src/kern/conf/: PROJ2  PROJ3
group_project/src/kern/include/: syscall.h
group_project/src/kern/include/kern/: limits.h
group_project/src/kern/io/: file_table.c
group_project/src/kern/lib/: kprintf.c
group_project/src/kern/main/: main.c
group_project/src/kern/proc/: proc.c
group_project/src/kern/syscall/: close_syscall.c  exit_syscall.c  fork_syscall.c  getcwd_syscall.c  open_syscall.c  waitpid_syscall.c  write_syscall.c
group_project/src/kern/thread/: synch.c
project1/: .gitignore  CMakeLists.txt  Questions1.txt  compile.sh  llt_output.txt
project1/src/kern/include/: shared_buffer.h
project1/src/kern/shared_buffer/: shared_buffer_test.c
project1/src/kern/thread/: synch.c
root/: .gdbinit
src/: defs.mk  sbt_output.txt
src/design/: design-choices.md  project3-design.md  project3-status.md
src/kern/arch/mips/syscall/: syscall.c
src/kern/concurrent_list/: interleaving_1.txt  interleaving_2.txt  interleaving_3.txt  interleaving_4.txt  linked_list.c  linked_list_test.c
src/kern/conf/: PROJ3
src/kern/include/: files.h  filetable.h  limits.h  linked_list.h  proc.h  shared_buffer.h  synch.h  syscall.h  test.h  testlib.h  thread.h
src/kern/io/: file_table.c
src/kern/main/: main.c  menu.c
src/kern/proc/: proc.c
src/kern/shared_buffer/: shared_buffer.c  shared_buffer_test.c
src/kern/syscall/: chdir_syscall.c  close_syscall.c  dup2_syscall.c  execv_syscall.c  exit_syscall.c  fork_syscall.c  getcwd_syscall.c  getpid_syscall.c  lseek_syscall.c  mkdir_syscall.c  open_syscall.c  read_syscall.c  waitpid_syscall.c  write_syscall.c
src/kern/thread/: synch.c  thread.c
src/userland/testbin/forktest/: forktest.c
