cmake_minimum_required(VERSION 3.10)
project(os161_bgp C)

set(CMAKE_C_STANDARD 11)

include_directories(src/kern/include)
include_directories(src/userland/include)
include_directories(src/kern/arch/mips/include)
include_directories(src/kern/arch/sys161/include)
include_directories(src/kern/dev)
include_directories(src/kern/compile/PROJ3/includelinks)
include_directories(root/include)

add_executable(os161_bgp
        src/build/install/hostinclude/kern/mips/endian.h
        src/build/install/hostinclude/kern/mips/regdefs.h
        src/build/install/hostinclude/kern/mips/setjmp.h
        src/build/install/hostinclude/kern/mips/signal.h
        src/build/install/hostinclude/kern/mips/types.h
        src/build/install/hostinclude/hostcompat.h
        src/build/install/include/kern/mips/endian.h
        src/build/install/include/kern/mips/regdefs.h
        src/build/install/include/kern/mips/setjmp.h
        src/build/install/include/kern/mips/signal.h
        src/build/install/include/kern/mips/types.h
        src/build/install/include/kern/endian.h
        src/build/install/include/kern/errmsg.h
        src/build/install/include/kern/errno.h
        src/build/install/include/kern/fcntl.h
        src/build/install/include/kern/ioctl.h
        src/build/install/include/kern/iovec.h
        src/build/install/include/kern/limits.h
        src/build/install/include/kern/reboot.h
        src/build/install/include/kern/resource.h
        src/build/install/include/kern/secret.h
        src/build/install/include/kern/secure.h
        src/build/install/include/kern/seek.h
        src/build/install/include/kern/sfs.h
        src/build/install/include/kern/signal.h
        src/build/install/include/kern/socket.h
        src/build/install/include/kern/stat.h
        src/build/install/include/kern/stattypes.h
        src/build/install/include/kern/syscall.h
        src/build/install/include/kern/test161.h
        src/build/install/include/kern/time.h
        src/build/install/include/kern/types.h
        src/build/install/include/kern/unistd.h
        src/build/install/include/kern/wait.h
        src/build/install/include/sys/cdefs.h
        src/build/install/include/sys/endian.h
        src/build/install/include/sys/ioctl.h
        src/build/install/include/sys/null.h
        src/build/install/include/sys/reboot.h
        src/build/install/include/sys/stat.h
        src/build/install/include/sys/types.h
        src/build/install/include/sys/wait.h
        src/build/install/include/test/quint.h
        src/build/install/include/test/test.h
        src/build/install/include/test/triple.h
        src/build/install/include/test161/secure.h
        src/build/install/include/test161/test161.h
        src/build/install/include/types/size_t.h
        src/build/install/include/assert.h
        src/build/install/include/err.h
        src/build/install/include/errno.h
        src/build/install/include/fcntl.h
        src/build/install/include/limits.h
        src/build/install/include/setjmp.h
        src/build/install/include/signal.h
        src/build/install/include/stdarg.h
        src/build/install/include/stdbool.h
        src/build/install/include/stdint.h
        src/build/install/include/stdio.h
        src/build/install/include/stdlib.h
        src/build/install/include/string.h
        src/build/install/include/time.h
        src/build/install/include/unistd.h
        src/build/userland/testbin/randcall/calls.c
        src/common/gcc-millicode/adddi3.c
        src/common/gcc-millicode/anddi3.c
        src/common/gcc-millicode/ashldi3.c
        src/common/gcc-millicode/ashrdi3.c
        src/common/gcc-millicode/cmpdi2.c
        src/common/gcc-millicode/divdi3.c
        src/common/gcc-millicode/iordi3.c
        src/common/gcc-millicode/longlong.h
        src/common/gcc-millicode/lshldi3.c
        src/common/gcc-millicode/lshrdi3.c
        src/common/gcc-millicode/moddi3.c
        src/common/gcc-millicode/muldi3.c
        src/common/gcc-millicode/negdi2.c
        src/common/gcc-millicode/notdi2.c
        src/common/gcc-millicode/qdivrem.c
        src/common/gcc-millicode/subdi3.c
        src/common/gcc-millicode/ucmpdi2.c
        src/common/gcc-millicode/udivdi3.c
        src/common/gcc-millicode/umoddi3.c
        src/common/gcc-millicode/xordi3.c
        src/common/libc/printf/__printf.c
        src/common/libc/printf/snprintf.c
        src/common/libc/printf/tprintf.c
        src/common/libc/stdlib/atoi.c
        src/common/libc/string/bzero.c
        src/common/libc/string/memcpy.c
        src/common/libc/string/memmove.c
        src/common/libc/string/memset.c
        src/common/libc/string/strcat.c
        src/common/libc/string/strchr.c
        src/common/libc/string/strcmp.c
        src/common/libc/string/strcpy.c
        src/common/libc/string/strlen.c
        src/common/libc/string/strrchr.c
        src/common/libc/string/strtok_r.c
        src/common/libtest161/config.h
        src/common/libtest161/secure.c
        src/common/libtest161/sha256.c
        src/common/libtest161/sha256.h
        src/common/libtest161/test161.c
        src/kern/arch/mips/include/kern/endian.h
        src/kern/arch/mips/include/kern/regdefs.h
        src/kern/arch/mips/include/kern/setjmp.h
        src/kern/arch/mips/include/kern/signal.h
        src/kern/arch/mips/include/kern/types.h
        src/kern/arch/mips/include/current.h
        src/kern/arch/mips/include/elf.h
        src/kern/arch/mips/include/membar.h
        src/kern/arch/mips/include/specialreg.h
        src/kern/arch/mips/include/spinlock.h
        src/kern/arch/mips/include/thread.h
        src/kern/arch/mips/include/tlb.h
        src/kern/arch/mips/include/trapframe.h
        src/kern/arch/mips/include/types.h
        src/kern/arch/mips/include/vm.h
        src/kern/arch/mips/locore/trap.c
        src/kern/arch/mips/syscall/syscall.c
        src/kern/arch/mips/thread/cpu.c
        src/kern/arch/mips/thread/switchframe.c
        src/kern/arch/mips/thread/switchframe.h
        src/kern/arch/mips/thread/thread_machdep.c
        src/kern/arch/mips/vm/dumbvm.c
        src/kern/arch/mips/vm/ram.c
        src/kern/arch/sys161/dev/lamebus_machdep.c
        src/kern/arch/sys161/include/bus.h
        src/kern/arch/sys161/include/maxcpus.h
        src/kern/compile/PROJ3/includelinks/machine/kern/endian.h
        src/kern/compile/PROJ3/includelinks/machine/kern/regdefs.h
        src/kern/compile/PROJ3/includelinks/machine/kern/setjmp.h
        src/kern/compile/PROJ3/includelinks/machine/kern/signal.h
        src/kern/compile/PROJ3/includelinks/machine/kern/types.h
        src/kern/compile/PROJ3/includelinks/mips/kern/endian.h
        src/kern/compile/PROJ3/includelinks/mips/kern/regdefs.h
        src/kern/compile/PROJ3/includelinks/mips/kern/setjmp.h
        src/kern/compile/PROJ3/includelinks/mips/kern/signal.h
        src/kern/compile/PROJ3/includelinks/mips/kern/types.h
        src/kern/compile/PROJ3/autoconf.c
        src/kern/compile/PROJ3/autoconf.h
        src/kern/compile/PROJ3/opt-automationtest.h
        src/kern/compile/PROJ3/opt-concurrent_list.h
        src/kern/compile/PROJ3/opt-dumbvm.h
        src/kern/compile/PROJ3/opt-hangman.h
        src/kern/compile/PROJ3/opt-net.h
        src/kern/compile/PROJ3/opt-netfs.h
        src/kern/compile/PROJ3/opt-noasserts.h
        src/kern/compile/PROJ3/opt-semfs.h
        src/kern/compile/PROJ3/opt-sfs.h
        src/kern/compile/PROJ3/vers.c
        src/kern/concurrent_list/linked_list.c
        src/kern/concurrent_list/linked_list_test.c
        src/kern/dev/generic/beep.c
        src/kern/dev/generic/beep.h
        src/kern/dev/generic/console.c
        src/kern/dev/generic/console.h
        src/kern/dev/generic/random.c
        src/kern/dev/generic/random.h
        src/kern/dev/generic/rtclock.c
        src/kern/dev/generic/rtclock.h
        src/kern/dev/lamebus/beep_ltimer.c
        src/kern/dev/lamebus/con_lscreen.c
        src/kern/dev/lamebus/con_lser.c
        src/kern/dev/lamebus/emu.c
        src/kern/dev/lamebus/emu.h
        src/kern/dev/lamebus/emu_att.c
        src/kern/dev/lamebus/lamebus.c
        src/kern/dev/lamebus/lamebus.h
        src/kern/dev/lamebus/lhd.c
        src/kern/dev/lamebus/lhd.h
        src/kern/dev/lamebus/lhd_att.c
        src/kern/dev/lamebus/lnet.c
        src/kern/dev/lamebus/lnet_att.c
        src/kern/dev/lamebus/lrandom.c
        src/kern/dev/lamebus/lrandom.h
        src/kern/dev/lamebus/lrandom_att.c
        src/kern/dev/lamebus/lscreen.c
        src/kern/dev/lamebus/lscreen.h
        src/kern/dev/lamebus/lscreen_att.c
        src/kern/dev/lamebus/lser.c
        src/kern/dev/lamebus/lser.h
        src/kern/dev/lamebus/lser_att.c
        src/kern/dev/lamebus/ltimer.c
        src/kern/dev/lamebus/ltimer.h
        src/kern/dev/lamebus/ltimer_att.c
        src/kern/dev/lamebus/ltrace.c
        src/kern/dev/lamebus/ltrace.h
        src/kern/dev/lamebus/ltrace_att.c
        src/kern/dev/lamebus/random_lrandom.c
        src/kern/dev/lamebus/rtclock_ltimer.c
        src/kern/fs/semfs/semfs.h
        src/kern/fs/semfs/semfs_fsops.c
        src/kern/fs/semfs/semfs_obj.c
        src/kern/fs/semfs/semfs_vnops.c
        src/kern/fs/sfs/sfs_balloc.c
        src/kern/fs/sfs/sfs_bmap.c
        src/kern/fs/sfs/sfs_dir.c
        src/kern/fs/sfs/sfs_fsops.c
        src/kern/fs/sfs/sfs_inode.c
        src/kern/fs/sfs/sfs_io.c
        src/kern/fs/sfs/sfs_vnops.c
        src/kern/fs/sfs/sfsprivate.h
        src/kern/include/kern/endian.h
        src/kern/include/kern/errmsg.h
        src/kern/include/kern/errno.h
        src/kern/include/kern/fcntl.h
        src/kern/include/kern/ioctl.h
        src/kern/include/kern/iovec.h
        src/kern/include/kern/limits.h
        src/kern/include/kern/reboot.h
        src/kern/include/kern/resource.h
        src/kern/include/kern/secret.h
        src/kern/include/kern/secure.h
        src/kern/include/kern/seek.h
        src/kern/include/kern/sfs.h
        src/kern/include/kern/signal.h
        src/kern/include/kern/socket.h
        src/kern/include/kern/stat.h
        src/kern/include/kern/stattypes.h
        src/kern/include/kern/syscall.h
        src/kern/include/kern/test161.h
        src/kern/include/kern/time.h
        src/kern/include/kern/types.h
        src/kern/include/kern/unistd.h
        src/kern/include/kern/wait.h
        src/kern/include/addrspace.h
        src/kern/include/array.h
        src/kern/include/bitmap.h
        src/kern/include/cdefs.h
        src/kern/include/clock.h
        src/kern/include/copyinout.h
        src/kern/include/cpu.h
        src/kern/include/current.h
        src/kern/include/device.h
        src/kern/include/elf.h
        src/kern/include/emufs.h
        src/kern/include/endian.h
        src/kern/include/fs.h
        src/kern/include/hangman.h
        src/kern/include/lib.h
        src/kern/include/limits.h
        src/kern/include/linked_list.h
        src/kern/include/mainbus.h
        src/kern/include/membar.h
        src/kern/include/proc.h
        src/kern/include/prompt.h
        src/kern/include/setjmp.h
        src/kern/include/sfs.h
        src/kern/include/signal.h
        src/kern/include/spinlock.h
        src/kern/include/spl.h
        src/kern/include/stat.h
        src/kern/include/stdarg.h
        src/kern/include/synch.h
        src/kern/include/syscall.h
        src/kern/include/test.h
        src/kern/include/testlib.h
        src/kern/include/thread.h
        src/kern/include/threadlist.h
        src/kern/include/threadprivate.h
        src/kern/include/types.h
        src/kern/include/uio.h
        src/kern/include/version.h
        src/kern/include/vfs.h
        src/kern/include/vm.h
        src/kern/include/vnode.h
        src/kern/include/wchan.h
        src/kern/lib/array.c
        src/kern/lib/bitmap.c
        src/kern/lib/bswap.c
        src/kern/lib/kgets.c
        src/kern/lib/kprintf.c
        src/kern/lib/misc.c
        src/kern/lib/time.c
        src/kern/lib/uio.c
        src/kern/main/main.c
        src/kern/main/menu.c
        src/kern/proc/proc.c
        src/kern/synchprobs/stoplight.c
        src/kern/synchprobs/whalemating.c
        src/kern/syscall/loadelf.c
        src/kern/syscall/runprogram.c
        src/kern/syscall/time_syscalls.c
        src/kern/test/arraytest.c
        src/kern/test/automationtest.c
        src/kern/test/bitmaptest.c
        src/kern/test/fstest.c
        src/kern/test/hmacunit.c
        src/kern/test/kmalloctest.c
        src/kern/test/lib.c
        src/kern/test/nettest.c
        src/kern/test/rwtest.c
        src/kern/test/semunit.c
        src/kern/test/synchprobs.c
        src/kern/test/synchtest.c
        src/kern/test/threadlisttest.c
        src/kern/test/threadtest.c
        src/kern/test/tt3.c
        src/kern/thread/clock.c
        src/kern/thread/hangman.c
        src/kern/thread/spinlock.c
        src/kern/thread/spl.c
        src/kern/thread/synch.c
        src/kern/thread/thread.c
        src/kern/thread/threadlist.c
        src/kern/vfs/device.c
        src/kern/vfs/devnull.c
        src/kern/vfs/vfscwd.c
        src/kern/vfs/vfsfail.c
        src/kern/vfs/vfslist.c
        src/kern/vfs/vfslookup.c
        src/kern/vfs/vfspath.c
        src/kern/vfs/vnode.c
        src/kern/vm/addrspace.c
        src/kern/vm/copyinout.c
        src/kern/vm/kmalloc.c
        src/userland/bin/cat/cat.c
        src/userland/bin/cp/cp.c
        src/userland/bin/false/false.c
        src/userland/bin/ln/ln.c
        src/userland/bin/ls/ls.c
        src/userland/bin/mkdir/mkdir.c
        src/userland/bin/mv/mv.c
        src/userland/bin/pwd/pwd.c
        src/userland/bin/rm/rm.c
        src/userland/bin/rmdir/rmdir.c
        src/userland/bin/sh/sh.c
        src/userland/bin/sync/sync.c
        src/userland/bin/tac/tac.c
        src/userland/bin/true/true.c
        src/userland/include/sys/cdefs.h
        src/userland/include/sys/endian.h
        src/userland/include/sys/ioctl.h
        src/userland/include/sys/null.h
        src/userland/include/sys/reboot.h
        src/userland/include/sys/stat.h
        src/userland/include/sys/types.h
        src/userland/include/sys/wait.h
        src/userland/include/test/quint.h
        src/userland/include/test/test.h
        src/userland/include/test/triple.h
        src/userland/include/test161/secure.h
        src/userland/include/test161/test161.h
        src/userland/include/types/size_t.h
        src/userland/include/assert.h
        src/userland/include/err.h
        src/userland/include/errno.h
        src/userland/include/fcntl.h
        src/userland/include/limits.h
        src/userland/include/setjmp.h
        src/userland/include/signal.h
        src/userland/include/stdarg.h
        src/userland/include/stdbool.h
        src/userland/include/stdint.h
        src/userland/include/stdio.h
        src/userland/include/stdlib.h
        src/userland/include/string.h
        src/userland/include/time.h
        src/userland/include/unistd.h
        src/userland/lib/hostcompat/err.c
        src/userland/lib/hostcompat/host-err.h
        src/userland/lib/hostcompat/hostcompat.c
        src/userland/lib/hostcompat/hostcompat.h
        src/userland/lib/hostcompat/ntohll.c
        src/userland/lib/hostcompat/time.c
        src/userland/lib/libc/stdio/__puts.c
        src/userland/lib/libc/stdio/getchar.c
        src/userland/lib/libc/stdio/printf.c
        src/userland/lib/libc/stdio/putchar.c
        src/userland/lib/libc/stdio/puts.c
        src/userland/lib/libc/stdlib/abort.c
        src/userland/lib/libc/stdlib/exit.c
        src/userland/lib/libc/stdlib/getenv.c
        src/userland/lib/libc/stdlib/malloc.c
        src/userland/lib/libc/stdlib/qsort.c
        src/userland/lib/libc/stdlib/random.c
        src/userland/lib/libc/stdlib/system.c
        src/userland/lib/libc/string/memcmp.c
        src/userland/lib/libc/string/strerror.c
        src/userland/lib/libc/string/strtok.c
        src/userland/lib/libc/time/time.c
        src/userland/lib/libc/unix/__assert.c
        src/userland/lib/libc/unix/err.c
        src/userland/lib/libc/unix/errno.c
        src/userland/lib/libc/unix/execvp.c
        src/userland/lib/libc/unix/getcwd.c
        src/userland/lib/libtest/quint.c
        src/userland/lib/libtest/triple.c
        src/userland/sbin/dumpsfs/dumpsfs.c
        src/userland/sbin/halt/halt.c
        src/userland/sbin/mksfs/disk.c
        src/userland/sbin/mksfs/disk.h
        src/userland/sbin/mksfs/mksfs.c
        src/userland/sbin/mksfs/support.c
        src/userland/sbin/mksfs/support.h
        src/userland/sbin/poweroff/poweroff.c
        src/userland/sbin/reboot/reboot.c
        src/userland/sbin/sfsck/compat.h
        src/userland/sbin/sfsck/freemap.c
        src/userland/sbin/sfsck/freemap.h
        src/userland/sbin/sfsck/ibmacros.h
        src/userland/sbin/sfsck/inode.c
        src/userland/sbin/sfsck/inode.h
        src/userland/sbin/sfsck/main.c
        src/userland/sbin/sfsck/main.h
        src/userland/sbin/sfsck/pass1.c
        src/userland/sbin/sfsck/pass2.c
        src/userland/sbin/sfsck/passes.h
        src/userland/sbin/sfsck/sb.c
        src/userland/sbin/sfsck/sb.h
        src/userland/sbin/sfsck/sfs.c
        src/userland/sbin/sfsck/sfs.h
        src/userland/sbin/sfsck/utils.c
        src/userland/sbin/sfsck/utils.h
        src/userland/testbin/add/add.c
        src/userland/testbin/argtest/argtest.c
        src/userland/testbin/badcall/bad_chdir.c
        src/userland/testbin/badcall/bad_close.c
        src/userland/testbin/badcall/bad_dup2.c
        src/userland/testbin/badcall/bad_execv.c
        src/userland/testbin/badcall/bad_fsync.c
        src/userland/testbin/badcall/bad_ftruncate.c
        src/userland/testbin/badcall/bad_getcwd.c
        src/userland/testbin/badcall/bad_getdirentry.c
        src/userland/testbin/badcall/bad_ioctl.c
        src/userland/testbin/badcall/bad_link.c
        src/userland/testbin/badcall/bad_lseek.c
        src/userland/testbin/badcall/bad_mkdir.c
        src/userland/testbin/badcall/bad_open.c
        src/userland/testbin/badcall/bad_pipe.c
        src/userland/testbin/badcall/bad_read.c
        src/userland/testbin/badcall/bad_readlink.c
        src/userland/testbin/badcall/bad_reboot.c
        src/userland/testbin/badcall/bad_remove.c
        src/userland/testbin/badcall/bad_rename.c
        src/userland/testbin/badcall/bad_rmdir.c
        src/userland/testbin/badcall/bad_sbrk.c
        src/userland/testbin/badcall/bad_stat.c
        src/userland/testbin/badcall/bad_symlink.c
        src/userland/testbin/badcall/bad_time.c
        src/userland/testbin/badcall/bad_waitpid.c
        src/userland/testbin/badcall/bad_write.c
        src/userland/testbin/badcall/common_buf.c
        src/userland/testbin/badcall/common_fds.c
        src/userland/testbin/badcall/common_path.c
        src/userland/testbin/badcall/config.h
        src/userland/testbin/badcall/driver.c
        src/userland/testbin/badcall/report.c
        src/userland/testbin/badcall/test.h
        src/userland/testbin/bigexec/bigexec.c
        src/userland/testbin/bigfile/bigfile.c
        src/userland/testbin/bigfork/bigfork.c
        src/userland/testbin/bigseek/bigseek.c
        src/userland/testbin/bloat/bloat.c
        src/userland/testbin/closetest/closetest.c
        src/userland/testbin/conman/conman.c
        src/userland/testbin/consoletest/consoletest.c
        src/userland/testbin/crash/crash.c
        src/userland/testbin/ctest/ctest.c
        src/userland/testbin/dirconc/dirconc.c
        src/userland/testbin/dirseek/dirseek.c
        src/userland/testbin/dirtest/dirtest.c
        src/userland/testbin/f_test/f_hdr.h
        src/userland/testbin/f_test/f_read.c
        src/userland/testbin/f_test/f_test.c
        src/userland/testbin/f_test/f_write.c
        src/userland/testbin/factorial/factorial.c
        src/userland/testbin/farm/farm.c
        src/userland/testbin/faulter/faulter.c
        src/userland/testbin/fileonlytest/fileonlytest.c
        src/userland/testbin/filetest/filetest.c
        src/userland/testbin/forkbomb/forkbomb.c
        src/userland/testbin/forktest/forktest.c
        src/userland/testbin/frack/check.c
        src/userland/testbin/frack/check.h
        src/userland/testbin/frack/data.c
        src/userland/testbin/frack/data.h
        src/userland/testbin/frack/do.c
        src/userland/testbin/frack/do.h
        src/userland/testbin/frack/main.c
        src/userland/testbin/frack/main.h
        src/userland/testbin/frack/name.c
        src/userland/testbin/frack/name.h
        src/userland/testbin/frack/ops.c
        src/userland/testbin/frack/ops.h
        src/userland/testbin/frack/pool.c
        src/userland/testbin/frack/pool.h
        src/userland/testbin/frack/workloads.c
        src/userland/testbin/frack/workloads.h
        src/userland/testbin/guzzle/guzzle.c
        src/userland/testbin/hash/hash.c
        src/userland/testbin/hog/hog.c
        src/userland/testbin/huge/huge.c
        src/userland/testbin/kitchen/kitchen.c
        src/userland/testbin/malloctest/malloctest.c
        src/userland/testbin/matmult/matmult-orig.c
        src/userland/testbin/matmult/matmult.c
        src/userland/testbin/multiexec/multiexec.c
        src/userland/testbin/opentest/opentest.c
        src/userland/testbin/palin/palin.c
        src/userland/testbin/parallelvm/parallelvm.c
        src/userland/testbin/poisondisk/poisondisk.c
        src/userland/testbin/psort/psort.c
        src/userland/testbin/quinthuge/quinthuge.c
        src/userland/testbin/quintmat/quintmat.c
        src/userland/testbin/quintsort/quintsort.c
        src/userland/testbin/randcall/extern.h
        src/userland/testbin/randcall/main.c
        src/userland/testbin/readwritetest/readwritetest.c
        src/userland/testbin/redirect/redirect.c
        src/userland/testbin/rmdirtest/rmdirtest.c
        src/userland/testbin/rmtest/rmtest.c
        src/userland/testbin/sbrktest/sbrktest.c
        src/userland/testbin/schedpong/grind.c
        src/userland/testbin/schedpong/main.c
        src/userland/testbin/schedpong/pong.c
        src/userland/testbin/schedpong/results.c
        src/userland/testbin/schedpong/results.h
        src/userland/testbin/schedpong/tasks.h
        src/userland/testbin/schedpong/think.c
        src/userland/testbin/schedpong/usem.c
        src/userland/testbin/schedpong/usem.h
        src/userland/testbin/shelltest/shelltest.c
        src/userland/testbin/shll/shll.c
        src/userland/testbin/sink/sink.c
        src/userland/testbin/sort/sort.c
        src/userland/testbin/sparsefile/sparsefile.c
        src/userland/testbin/spinner/spinner.c
        src/userland/testbin/stacktest/stacktest.c
        src/userland/testbin/sty/sty.c
        src/userland/testbin/tail/tail.c
        src/userland/testbin/tictac/tictac.c
        src/userland/testbin/triplehuge/triplehuge.c
        src/userland/testbin/triplemat/triplemat.c
        src/userland/testbin/triplesort/triplesort.c
        src/userland/testbin/usemtest/usemtest.c
        src/userland/testbin/userthreads/userthreads.c
        src/userland/testbin/waiter/waiter.c
        src/userland/testbin/zero/zero.c
        src/kern/include/shared_buffer.h
        src/kern/shared_buffer/shared_buffer.c
        src/kern/shared_buffer/shared_buffer_test.c src/kern/syscall/fork_syscall.c src/kern/syscall/execv_syscall.c src/kern/syscall/waitpid_syscall.c src/kern/include/filetable.h src/kern/io/file_table.c src/kern/syscall/exit_syscall.c src/kern/syscall/open_syscall.c src/kern/syscall/read_syscall.c src/kern/syscall/write_syscall.c)
